# AmongUsMaze

./: CMakeLists.txt  README.md
libraries/glfw/src/: mappings.h
source/: Button.cpp  Button.h  Imposter.cpp  Imposter.h  Maze.cpp  Maze.h  Player.cpp  Player.h  ScoreChanger.cpp  ScoreChanger.h  Text.cpp  Text.h  TextRenderer.cpp  Tile.cpp  Tile.h  game.cpp  game.h  main.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp
